--- a/app/components/header/index.module.scss
+++ b/app/components/header/index.module.scss
@@ -1,11 +1,11 @@
 .headerContainer {
-  @apply fixed w-full z-10;
+  @apply w-full z-10;
 
   .headerContainerWrapper {
     @apply py-5;
 
     .headerContainerWrapperItems {
-      @apply flex flex-row items-center justify-between ;
+      @apply flex flex-row items-center justify-between;
     }
   }
 }
